[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-api-core>=2.24.2",
    "google-genai>=1.10.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pydantic>=2.11.3",
    "pyyaml>=6.0.2",
    "ruff>=0.11.4",
    "streamlit>=1.44.1",
]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]            # formerly top‑level `select` :contentReference[oaicite:1]{index=1}
ignore = ["W391"]                         # formerly top‑level `ignore` :contentReference[oaicite:2]{index=2}
per-file-ignores = { "tests/*" = ["A003"] }  # formerly top‑level `per-file-ignores` :contentReference[oaicite:3]{index=3}

[tool.ruff.format]
preview = true
