[project]
name = "debt_call_analysis"
version = "0.1.0"
description = "Analyze call transcripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-core>=2.24.2",
    "google-genai>=1.10.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pydantic>=2.11.3",
    "pyyaml>=6.0.2",
    "ruff>=0.11.4",
    "streamlit>=1.44.1",
]

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["W391"]             

[tool.ruff.format]
preview = true
